[#] [docs] java
+ java module 调整目录到官方推荐
+ java module 测试transitive